Add logging dependencies and configure gitignore
- Add colorlog and python-json-logger dependencies
- Configure gitignore to exclude log files
- Update uv.lock with new dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "colorlog>=6.9.0",
+    "python-json-logger>=3.3.0",
+]
 
 [dependency-groups]
 dev = [
